# word-predictor

./: .gitignore  Procfile  README  README.md  counter-numba.py  counter.py  produce-web.py  produce.py  produce_api.py  requirements.txt  train-letter.py  train.py
Pre-Trained Models/A Christmas Carol/: counts.txt
docs/: README  app.py  produce-web.py  produce_api.py
docs/templates/: input.html
rust-version/counter-wp/: Cargo.toml
rust-version/produce-wp/: Cargo.toml  out.txt  produce-wp
rust-version/produce-wp/src/: lib.rs  main.bak  main.rs
